# bio-rosalind-tasks

./: pyproject.toml  requirements.txt  utils.py
DNA/: DNA.py
tests/: test_bio_rosalind_tasks.py
